--- a/gb/news392_7.md
+++ b/gb/news392_7.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744759.md#1" target="_blank">王赫：中共对美政策有“三蠢”</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744759.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/01/GettyImages-631870814-150x120.jpg" align ="left"></a>中共亟需打开中美关系局面。但拜登上台以来，迄今未与习近平通话，中美双边接触也不尽如中共意。一方面，这表明拜登对华政策尚未完全定调；另一方面，这也是中共对美政策愚蠢所致。中共的愚蠢至少有三。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 4:29 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744697.md#1" target="_blank">胡平：美国警察对黑人特别暴力吗？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744697.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/12/GettyImages-890234898-150x120.jpg" align ="left"></a>2020年5月25日，在美国明尼苏达州发生了一起警察致死一个名叫乔治?佛洛伊德（George Floyd）的黑人的事件。由此引发了一场蔓延全美的抗议运动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 3:38 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743719.md#1" target="_blank">唐青：习近平战狼外交 惊醒全世界</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743719.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/Untitled-collage-1-1-150x120.jpg" align ="left"></a>习近平近年来反复强调要敢于斗争，善于斗争，发扬 “斗争精神”。针锋相对应对国际挑战，强硬驳斥西方言论，被习近平定为国策，于是出现了“战狼外交”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 7:15 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743548.md#1" target="_blank">钟原：特斯拉在中国怎么了</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743548.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1297959285-150x120.jpg" align ="left"></a>2月8日，中共党媒新华社报导，特斯拉被市场监管总局等五部门约谈，涉及异常加速、电池起火、车辆远程升级等质量问题。2月9日，新华社又连发三篇报导，第一篇是《特斯拉回应被五部门约谈：将严格遵守中国法律法规》；第二篇是《特斯拉被约谈警示了什么》；第三篇是《特斯拉，质量面前没有“特”例》。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 6:41 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743268.md#1" target="_blank">杨威：习近平对中东欧放软降调</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743268.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1229676790-150x120.jpg" align ="left"></a>2月9日，习近平在中国-中东欧峰会上发表视频讲话，与最近在达沃斯论坛上的讲话相比，和之前在国际场合的多次讲话相比，姿态明显放软，“一带一路”的调门也被降低。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 6:38 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743544.md#1" target="_blank">【名家专栏】对抗中共导弹威胁需美军合作</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743544.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-486261596-150x120.jpg" align ="left"></a>美国海军非常关注中国的反舰弹道导弹（ASBM）的能力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 5:10 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743220.md#1" target="_blank">沈舟：美军双航母再聚南海继续强势威慑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/50924766701_6c78efdda6_k-150x120.jpg" align ="left"></a>2月9日，美军及时公布尼米兹号航母（CVN 68）和罗斯福号航母（CVN 71）舰队在南海共同演练，并继续向中共释放强烈威慑信号。2020年7月，尼米兹号航母和里根号航母（CVN76）曾在南海两度汇聚，之前还曾和罗斯福号航母在菲律宾海演练。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 2:26 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742476.md#1" target="_blank">【网海拾贝】支持社会主义的美国人骤减</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/IMG_1554-1-150x120.jpg" align ="left"></a>亚利桑那州基督教大学的文化研究中心2月3日发布的新闻稿写道，2020年总统大选后，只有32％的美国成年人支持社会主义，比2018年调查中的41％的社会主义支持率减少了9个百分点，这意味着全美国，支持社会主义的人数减少了2000万。新闻稿还说，“68％的多数人表示，他们更喜欢资本主义，这个比例相当于在全美，有超过1.7亿.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 5:08 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742407.md#1" target="_blank">袁斌：Clubhouse爆红，新疆人亲述被迫害惨状</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742407.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/gettyimages-1152108715-600x400-150x120.jpg" align ="left"></a>一个名为 Clubhouse 、以语音聊天为主的美国社交平台，这个星期突然在亚洲爆红。由于没有审查，令其成为大陆网络及言论审查的意外空间，大量中港台网民因此纷纷涌入，几乎每个房间都在聊政治，包括新疆、香港、台湾等敏感话题，引发了外媒的广泛关注，路透社、彭博社、《金融时报》、《日经亚洲》等主要媒体都发表了报道。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 4:38 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741876.md#1" target="_blank">王赫：缅甸政变 中共陷困局？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741876.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230909016-150x120.jpg" align ="left"></a>2月1日，缅甸军方发动政变。美国、西方国家群起谴责，酝酿制裁措施。中共与此迥异，仅指缅甸军方只是大规模改组政府，并联合俄罗斯挡下联合国安理会的谴责声明。有评论认为，缅甸政变是“中共看戏、西方着急”，或“美国踩空、中共得势”。笔者以为，实际情况可能恰恰相反，缅甸政变使中共对缅政策陷入困境。这有两点理由。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 11:21 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741470.md#1" target="_blank">周晓辉：又一批高官将落马 中南海释清洗信号</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741470.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_Hkg9561027-1-600x400-150x120.jpg" align ="left"></a>习所面临的党内形势依旧十分严峻，党内与其一心之人应该是少的可怜，因此习只能再度打出反腐旗号，中共新一波的清洗已经拉开了帷幕，而伴随着又一批高官的倒台，中共内部各派的博弈将走向前所未有的激烈。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 10:25 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741326.md#1" target="_blank">钟原：中共发检测新通知 泄漏防疫真相</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741326.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230796021-150x120.jpg" align ="left"></a>2月8日，中共卫健委发布了《关于进一步做好新冠病毒核酸检测服务的通知》（联防联控机制综发〔2021〕26号，以下简称《通知》），重新提出了中共病毒（新冠病毒）检测的要求，却泄漏了中国大陆疫情防控的真相。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 6:42 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741214.md#1" target="_blank">宋善：七十年前行恶 九旬老人受审判</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741214.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-817995500_master-150x120.jpg" align ="left"></a>二零二一年二月五日，一名95岁的德国老妇被控“共谋杀害”一万人，因为她在第二次世界大战期间担任纳粹集中营秘书工作。由于德国的隐私法，化名艾尔加德（Irmgard F）的她21岁时担任“施图特霍夫（Stutthof）集中营”指挥官的秘书，多年来她一直坚称自己对集中营发生的大规模死亡事件并不知情。《美联社》报导，艾尔加德的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 5:34 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741116.md#1" target="_blank">杨威：中共再四面出击 拜登示弱恐带来风险</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12741116.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-121376533-150x120.jpg" align ="left"></a>拜登认为习近平很聪明，也非常强硬，但批评习近平“从骨子里没有民主意识”。拜登也称美中“会有极度竞争”，但又称“我们不需要发生冲突”。拜登的战略忍耐对中共来说，相当于示弱。习近平却不愿忍耐，很快强硬地再次出击。拜登政府若不能尽快真正强硬，恐引来祸端。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 5:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740778.md#1" target="_blank">【名家专栏】美国精英层试图操控游戏规则</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740778.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230856255-150x120.jpg" align ="left"></a>在1月6日美国国会大厦骚动事件之后，美国统治阶级（精英阶层）向民众展露了前所未有的强横手段。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 2:31 AM			</td></tr>
@@ -21,35 +33,22 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739728.md#1" target="_blank">颜纯钩：中美对话各表述 缓和不易恶化也难</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739728.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_9298LZ-150x120.jpg" align ="left"></a>美国国国务卿布林肯与杨洁箎终于通了电话。这个电话真是难产，拜登上台已近二十天，拜登本人与世界各大国总统首相都通了电话，唯独把习近平晾在一边。国务卿布林肯也与很多大中小国家外交部长通了电话，唯独把杨洁箎晾在一边，甚至菲律宾、泰国外交部长，都先杨洁箎得此荣幸，只有中国政府，没有被美国政府放在眼里。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 11:22 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739607.md#1" target="_blank">张慧东：为何中共各部门甩锅“就地过年”？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739607.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/2021-02-07_202011-150x120.png" align ="left"></a>1月25日，中共国务院办公厅印发《关于做好人民群众就地过年服务保障工作的通知》，提出把人员流动降到最低，要求民众包括未离校的学生实行“就地过年”。对于民众询问是否强制“就地过年”，中共官方回应时含糊其辞，只是说按高、中、低风险三个分类执行，使用中共特有的谎言话语系统来解释：就地过年，不得返乡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 10:23 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12739107.md#1" target="_blank">钟原：李克强近日透露的中国经济实情</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12739107.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1227509190-150x120.jpg" align ="left"></a>2月5日，李克强与一些欧洲企业家视频对话，急于打通欧中经贸关系，他试图描绘中国经济的美好前景，但话音刚落，2月7日，他就去了山西看望贫苦户。此外，李克强也与英国企业家沟通，连称“破冰”。在国务院会议上，李克强还专门谈中小企业破产问题。中国经济的真实状况，露出了端倪。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 8:35 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738927.md#1" target="_blank">杨威：习近平继续施压拜登 美国准备好了吗？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738927.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-138943786-1-150x120.jpg" align ="left"></a>拜登2月4日称中共是“最严峻的竞争对手”，2月5日，美国国务卿布林肯与杨洁篪首次沟通就各说各话，中共期望的“美中关系改善”明显开局不利，中共高层回避了2天后，终于变相表态。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 2:01 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716816.md#1" target="_blank">沈舟：美国之外的哪国空军还能入三甲？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716816.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/14812718947_7acaedb4dc_k-150x120.jpg" align ="left"></a>一个国家的空中军事力量，越来越扮演关键的作用，无论防卫还是进攻，掌握空中优势，都几乎成为胜负的关键，空军也是各军事强国优先发展的军种。
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744813.md#1" target="_blank">释先生：2021大陆国运</a><br></h3>今年气运不般同，火水如妻陌路中。
+水向南方偏多旱，火燎北国雨濛胧。
+云里祝融焚飞雁，海内龙王尽放功。
+千百石崇成乞丐，亿万黎民有笑容。
+阅墙兄弟参商见，执笏同僚互交攻。
+索索空囊仍依旧，凫凫炊烟几处同。
+暗里多生劈啪响，疑中难见彩霞红。
+疫鬼窥伺犹难散，枭鹰旋转候南风。
+心肾不交医愁苦，阴阳相悖子平穷.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 4:47 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744145.md#1" target="_blank">夏林：川普，沉默如金</a><br></h3>1月20日，乘空军一号回到海湖庄园后，川普就逍遥了，不再对世事置评，小隐隐于野。
 
-谈起空军，大多数人感兴趣的可能是战机之间的空战，衡量谁能夺取制空权，但这只是第一步。从空中打击地面和海上目标，才是空军更关键的任务，也才能真正左右战局。
-
-衡量一个国家空军的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 1:35 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738507.md#1" target="_blank">历史与现实：突然到来的瘟疫</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738507.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/d5b05b93cadb8291babf888c2e58c7cc-600x400-150x120.jpg" align ="left"></a>在历史上的数次大瘟疫中，往往在人们放松警惕时，瘟疫像海啸一样袭来，令人猝不及防。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 4:59 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738476.md#1" target="_blank">阿伦：知道你的手机怎么监听你的么(上)？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1210865943-600x400-1-150x120.jpg" align ="left"></a>2018年4月11日，连续5个小时，脸书创始人扎克伯格，孤独地坐在美国国会的听证会现场，面对着44名参议员和一个接一个的尖锐提问。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 4:17 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737812.md#1" target="_blank">王友群：谁“妄图窃取党和国家权力”？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737812.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/xjp-600x400-150x120.jpg" align ="left"></a>1月22日，习近平在中纪委五次全会上称，腐败仍是“最大风险”，强调反腐败是一场“输不起也决不能输的政治斗争”，必须“坚决打赢”。
-
-1月23日，新华社发表解读文章称，“政治腐败是最大的腐败。一些腐败分子结成利益集团，妄图窃取党和国家权力”。
-
-习近平的讲话和新华社的解读文章集中到一点，就是有人想夺习近平的权。那.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 2:38 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738385.md#1" target="_blank">向真：自由世界的当务之急</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738385.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/483262-150x120.png" align ="left"></a>二零二一年二月四日，知名机构“自由之家”发布一份名为“看不见却构得着”（Out of Sight, Not Out of Reach）的报告(下简称A)，指出中共针对宗教人士、异议人士等“实施最复杂、最全面与最全球化的跨国镇压运动”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 1:40 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737833.md#1" target="_blank">袁斌：这不准写 那不准评 自媒体还能写什么？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737833.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/09/wechat-weibo-tieba@1200x1200-150x120.jpg" align ="left"></a>今年是中共成立100周年。为了进一步加强言论管控，确保网络空间“正能量充沛”、“主旋律高昂”，中共网信办1月29日专门召开会议，宣布将“重点整治”自媒体、短片平台等内地网上平台。身兼中宣部副部长的中央网信办主任庄荣文在会上特别强调，要加强规范管理自媒体，对违法违规账号和所在平台加强处罚，让“监管长牙齿，让违规主体长记性.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 12:51 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737931.md#1" target="_blank">【名家专栏】针对美国公民的“新反恐战争”</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737931.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-635268902-1200x860-150x120.jpg" align ="left"></a>本周，将反对派领导人唐纳德?川普的支持者定义为 “国内恐怖分子” 的运动发生了新的转折。一份中间偏右的刊物认为，应该像对待2001年世贸中心和五角大楼袭击事件的伊斯兰极端分子一样去对待美国公民。前中情局官员凯文?卡罗尔（Kevin Carroll）在发表于《华盛顿检验者》的文章中写道：“我们打败了基地组织，对上个月袭击.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 7:05 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737815.md#1" target="_blank">石铭：中共是漠视生命的恶魔</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737815.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/10/p7677901a412057492-150x120.jpg" align ="left"></a>据明慧网报道统计，二零二零年至少有二十多名法轮功学员在中共监狱、看守所、派出所等场所被迫害离世，二十名法轮功学员被迫害致生命垂危，并且大部分法轮功学员仍被非法关押，继续遭受着中共迫害。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 4:54 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737751.md#1" target="_blank">张慧东：绿色能源计划与中共称霸野心</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737751.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/3f6714ed95c6da49c44b85dd64d113e8-150x120.jpg" align ="left"></a>拜登上任当周就签署总统行政令，取消Keystone XL石油管道项目的许可，并宣布美国重新加入《巴黎气候协定》。外界预计，下一步拜登政府必然会加大力度推进绿色能源计划。此前，拜登在竞选期间曾表示，计划投资2万亿美元确保美国实现100％的清洁能源经济，并在2050年之前达到“净零排放”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 4:16 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737158.md#1" target="_blank">隋志：中共海外渗透一再挫败</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737158.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230969107-150x120.jpg" align ="left"></a>二零二一年二月四日，英国媒体监管机构通讯管理局（Ofcom）吊销了中共“央视”国际部（环球电视网，CGTN）在英国的广播执照，原因是CGTN“最终是由中共控制的，而不是独立运作的”。CGTN在欧洲的总部恰在伦敦，其广播执照被英国吊销，导致中共“大外宣”的欧洲业务陷入混乱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 3:35 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736313.md#1" target="_blank">世界各国的主力战机 不可低估的侦察机</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/U-2-150x120.jpg" align ="left"></a>世界上战力最强的军队，无疑是美军，美军不仅强在打击能力，更具备强大的侦察、情报搜集、整合能力。更多掌握敌人的准确情报，做出针对性部署，往往是战场的关键。
-
-美军的各类侦察机、电战机、指挥机种类繁多，数目庞大，仅介绍主要的一些类别。美国的高性能侦察机也提供给盟国使用，此外，俄罗斯也有几种侦察机，中共则在不断模仿。
-.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 3:32 AM			</td></tr>
+川爷原是这个世界上最喜吵闹的人，一天几十个推。处理公务，喜欢高调自夸；处理私人关系呢，无论是市井无赖还是土豆克龙，只要让爷不爽，双倍嬉笑怒骂（double down），家人朋友苦苦相劝终不改，斗在其中，乐在其中。但是，他忽然就沉默下.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 9:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740466.md#1" target="_blank">石铭：河北82岁老人被枉判十年！</a><br></h3>据明慧网近日报导，河北省衡水市深州市82岁的退休教师李登臣，二零二一年元旦前后再次被绑架，被非法判刑十年，目前被非法关押在保定监狱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 1:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740917.md#1" target="_blank">【纪元专栏】加国劳大破产的教训 高校办学需量力而行</a><br></h3>大学，不仅为所在城市创造大量高薪就业，而且吸引大学学生，增加当地人口，丰富当地文化知识生活。加拿大许多大学有上百年历史，而且至今仍活力四射。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 10:54 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740396.md#1" target="_blank">袁斌：一位首批中国留苏生的觉醒心路</a><br></h3>一九五六年，中共选派了三十位年轻人去苏联高等院校学习计算机。孙乐之是其中之一，而且还担任了莫斯科动力学院中国留学生的队长、党支部书记，可以说深得“组织”上的信任。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 5:54 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739698.md#1" target="_blank">乾元：零下三十度停暖的热电项目是怎批下来的</a><br></h3>据报导，黑龙江省绥化市庆安县在-30℃气温之下停止供暖，先后达两周之久，引发民众愤怒，最终导致数百民众冲进当地县政府大楼讨说法。这个问题最终是否得到解决还没有得到证实，但政府方面反手以防疫为由动用警力将所有民众封在小区内，确保民众不会再走出家门来讨要说法。这创造了中共解决群体事件的一个新手段—以防疫为由堵门。类似这样的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 10:47 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739559.md#1" target="_blank">石铭：几家破碎几家愁？</a><br></h3>年关临近迫害急，几家破碎几家愁？又到了家家团圆相聚的日子，可是中共对法轮功学员的摧残迫害却无时不在进行着，而且越来越疯狂。中共残酷无度的迫害，使多少无辜百姓的家庭支离破碎、妻离子散与家破人亡？使多少善良无辜的人们在泪眼忧愁中度过一个又一个的大年夜？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月08日 9:40 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738451.md#1" target="_blank">数据派：评中共拙劣外交谎言</a><br></h3>几天之前，BBC推出重磅报导，揭露在新疆“再教育营”中存在针对妇女的系统性性侵与虐待，内容触目惊心，中共恶行令人发指。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 2:59 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/7/n12738362.md#1" target="_blank">千百度：困难户竟有茅台酒，慰问秀又演砸了</a><br></h3>每到年底，中共各级官员都要上演一个地固定的“节目”——“看望困难群众”。其实也就是慰问秀。按说这个节目对演技的要求并不高，但几乎年年都有地方演砸。这不，今年山东青岛城阳区又演砸了！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月07日 1:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_8.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/news392_7.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392_7.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/news392_7.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_7.htm">https://www.epochtimes.com/gb/news392_7.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
